[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cortexdb"
version = "5.0.0"
description = "Consciousness-Inspired Unified Database — replaces 7 databases with one"
readme = "README.md"
license = "Proprietary"
requires-python = ">=3.12"
authors = [
    { name = "Nirlab Inc", email = "eng@nirlab.ai" },
]
keywords = ["database", "unified", "cortexql", "vector", "graph", "streaming"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
]

dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.34,<0.35",
    "pydantic>=2,<3",
    "asyncpg>=0.30,<0.31",
    "redis[hiredis]>=5,<6",
    "qdrant-client>=1.12,<1.13",
    "cryptography>=44,<45",
    "python-dotenv>=1,<2",
    "httpx>=0.28,<0.29",
]

[project.optional-dependencies]
ml = [
    "sentence-transformers>=2.2",
    "torch>=2.0",
]
observability = [
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp>=1.20",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "httpx>=0.28",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
cortexdb = "cortexdb.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cortexdb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = "--import-mode=importlib"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "security: marks security/pentest tests",
    "stress: marks stress tests",
    "integration: marks integration tests (API-level with mocked backends)",
    "e2e: marks end-to-end tests (require running services)",
]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
